--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -12,7 +12,7 @@ substitutions:
   button_led_feedback_top: "true"
   button_led_feedback_bottom: "true"
 
-  short_vibra_time: 30ms
+  short_vibra_time: 10ms
   vibra_time: 150ms
   button_on_time: 500ms
 
@@ -735,20 +735,20 @@ script:
             - lambda: |-
                 if (id(button_held)[button-1] == 0) {
                   ESP_LOGI("button", "button %d no longer held in up and down", button);
-                  // TODO may be better to fade this out
+                  // TODO may be better to fade the bars out instead of turning them off
                   id(set_bar_height).execute(0);
                   id(bars_go_up_and_down).stop();
+                } else {
+                  int bar_height = id(button_bar_brightness)[button-1];
+                  ESP_LOGI("button", "button %d bar adjusting %d, height is %d", button, id(button_bar_flipper)[button-1], bar_height);
+                  if (bar_height == 7) {
+                    id(button_bar_flipper)[button-1] = -1;
+                  } else if (bar_height == 0) {
+                    id(button_bar_flipper)[button-1] = 1;
+                  }
+                  id(button_bar_brightness)[button-1]+=id(button_bar_flipper)[button-1];
+                  id(set_bar_height).execute(bar_height);
                 }
-                int bar_height = id(button_bar_brightness)[button-1];
-                ESP_LOGI("button", "button %d bar adjusting %d, height is %d", button, id(button_bar_flipper)[button-1], bar_height);
-                if (bar_height == 7) {
-                  id(button_bar_flipper)[button-1] = -1;
-                } else if (bar_height == 0) {
-                  id(button_bar_flipper)[button-1] = 1;
-                }
-                id(button_bar_brightness)[button-1]+=id(button_bar_flipper)[button-1];
-                id(set_bar_height).execute(bar_height);
-                id(short_vibration).execute();
             - delay: ${bar_delay}
 
 # TODO fix this:
@@ -780,25 +780,30 @@ script:
           //    }
           //  }
           //
-          for (int i=0; i<height; i++) {
-            ESP_LOGI("button", "setting led %d to %d, %d, %d", 13+i, id(bar_colors)[i].r, id(bar_colors)[i].g, id(bar_colors)[i].b);
-            target_led->get(13+i).set(id(bar_colors)[i]);
-            if (i==7) {
-              target_led->get(27).set(id(bar_colors)[i]);
-            } else {
-              target_led->get(5-i).set(id(bar_colors)[i]);
+          if (height == 0) {
+            target_led->range(13, 20).set(black);
+            target_led->range(0, 6).set(black);
+            target_led->get(27).set(black);
+          } else {
+            for (int i=0; i<height; i++) {
+              target_led->get(13+i).set(id(bar_colors)[i]);
+              if (i==7) {
+                target_led->get(27).set(id(bar_colors)[i]);
+              } else {
+                target_led->get(5-i).set(id(bar_colors)[i]);
+              }
             }
-          }
-          auto black = esphome::Color(0, 0, 0);
-          for (int i=height; i<7; i++) {
-            target_led->get(13+i).set(black);
-            if (i==7) {
-              target_led->get(27).set(black);
-            } else {
-              target_led->get(5-i).set(black);
+            auto black = esphome::Color(0, 0, 0);
+            for (int i=height; i<7; i++) {
+              target_led->get(13+i).set(black);
+              if (i==7) {
+                target_led->get(27).set(black);
+              } else {
+                target_led->get(5-i).set(black);
+              }
             }
+            target_led->schedule_show();
           }
-          target_led->schedule_show();
 
   - id: short_vibration
     then:
