--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -445,9 +445,10 @@ switch:
 
 light:
   - platform: esp32_rmt_led_strip
+    rgb_order: GRB
 # - platform: neopixelbus
-    type: GRB
-    variant: WS2811
+#   type: GRB
+#   variant: WS2811
     pin: ${led_pin}
     num_leds: 28
     name: "NeoPixel Light"
