--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -514,6 +514,28 @@ light:
           speed: 10
           width: 20
 
+media_player:
+  - platform: speaker
+    name: ${friendly_name} Player
+    id: speaker_out
+    media_pipeline:
+      speaker: audio_i2s
+    files:
+      - id: on
+        file: "sounds/on.wav"
+      - id: off
+        file: "sounds/off.wav"
+
+i2s_audio:
+  id: audio_i2s
+  i2s_lrclk_pin: ${audio_lrclk_pin}
+  i2s_bclk_pin: ${audio_bclk_pin}
+  i2s_dout_pin: ${audio_sdata_pin}
+  #use_legacy: true
+
+spiffs:
+  size: 2048
+
 # media_player:
 #   - platform: i2s_audio
 #     id: media_out
@@ -643,6 +665,10 @@ tx_ultimate_touch:
              state: ON
           - lambda: >
               ESP_LOGD("tx_ultimate_touch.on_long_touch_release", "Very Long Touch Release Position: %d / State: %d", touch.x, touch.state);
+        else:
+          - lambda: |-
+              auto button = id(button_lookup)[${button_count}-1][touch.x-1];
+              id(button_held)[button-1]=0;
 
 time:
   - platform: homeassistant
