--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -520,10 +520,12 @@ media_player:
     id: speaker_out
     media_pipeline:
       speaker: audio_i2s
+    announcement_pipeline:
+      speaker: audio_i2s
     files:
-      - id: on
+      - id: on_sound
         file: "sounds/on.wav"
-      - id: off
+      - id: off_sound
         file: "sounds/off.wav"
 
 i2s_audio:
