--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -516,16 +516,16 @@ light:
 
 speaker:
   - platform: i2s_audio
-    id: audio_i2s
-    i2s_lrclk_pin: ${audio_lrclk_pin}
-    i2s_bclk_pin: ${audio_bclk_pin}
-    i2s_dout_pin: ${audio_sdata_pin}
-  - platform: mixer
-    id: mixer_speaker
-    speaker: audio_i2s
-    source:
-      - id: announcement_source
-      - id: media_source
+    id: my_speaker
+    name: "Gemini sucks"
+    i2s_audio_id: audio_i2s
+
+# - platform: mixer
+#   id: mixer_speaker
+#   speaker: audio_i2s
+#   source:
+#     - id: announcement_source
+#     - id: media_source
 
 media_player:
   - platform: speaker
@@ -541,11 +541,11 @@ media_player:
       - id: off_sound
         file: "sounds/off.wav"
 
-# i2s_audio:
-#   id: audio_i2s
-#   i2s_lrclk_pin: ${audio_lrclk_pin}
-#   i2s_bclk_pin: ${audio_bclk_pin}
-#   i2s_dout_pin: ${audio_sdata_pin}
+i2s_audio:
+  id: audio_i2s
+  i2s_lrclk_pin: ${audio_lrclk_pin}
+  i2s_bclk_pin: ${audio_bclk_pin}
+  i2s_dout_pin: ${audio_sdata_pin}
 
 # media_player:
 #   - platform: i2s_audio
