--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -132,6 +132,8 @@ esp32:
   board: esp32dev
   framework:
     type: esp-idf
+    version: 4.4.8
+    platform_version: 5.4.0
 
 logger:
 #  hardware_uart: UART2
