--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -129,10 +129,10 @@ esphome:
       - script.execute: refresh_nightlight
 
 esp32:
-  board: esp32dev
+  board: esp32-s3-devkitc-1
+  variant: esp32s3
   framework:
     type: esp-idf
-    CONFIG_ESP32_S3_BOX_BOARD: "y"
 
 logger:
 #  hardware_uart: UART2
