--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -129,8 +129,7 @@ esphome:
       - script.execute: refresh_nightlight
 
 esp32:
-  board: esp32-s3-devkitc-1
-  variant: esp32s3
+  board: esp32dev
   framework:
     type: esp-idf
 
