--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -165,7 +165,7 @@ external_components:
   - source:
       type: git
       url: https://github.com/gnumpi/esphome_audio.git
-      ref: main
+      ref: master
     components:
       - adf_pipeline
       - i2s_audio
