--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -939,24 +939,25 @@ script:
 
   - id: possible_double_tap
     mode: parallel
-    - parameters:
+    parameters:
       button: int
-    - delay: ${double_tap_timeout}
-    - lambda: |-
-        if (id(button_double_tap)[button-1]>1) {
-            case 1: id(double_tap_1).publish_state(true); break;
-            case 2: id(double_tap_2).publish_state(true); break;
-            case 3: id(double_tap_3).publish_state(true); break;
-            case 4: id(double_tap_4).publish_state(true); break;
-        } else {
-          switch(button) {
-            case 1: id(button_1).publish_state(true); break;
-            case 2: id(button_2).publish_state(true); break;
-            case 3: id(button_3).publish_state(true); break;
-            case 4: id(button_4).publish_state(true); break;
+    then:
+      - delay: ${double_tap_timeout}
+      - lambda: |-
+          if (id(button_double_tap)[button-1]>1) {
+              case 1: id(double_tap_1).publish_state(true); break;
+              case 2: id(double_tap_2).publish_state(true); break;
+              case 3: id(double_tap_3).publish_state(true); break;
+              case 4: id(double_tap_4).publish_state(true); break;
+          } else {
+            switch(button) {
+              case 1: id(button_1).publish_state(true); break;
+              case 2: id(button_2).publish_state(true); break;
+              case 3: id(button_3).publish_state(true); break;
+              case 4: id(button_4).publish_state(true); break;
+            }
           }
-        }
-        id(button_double_tap)[button-1]=0;
+          id(button_double_tap)[button-1]=0;
 
   - id: short_vibration
     then:
